# cs175

./: .gitignore  01_audit.md  03_mathematical-preliminaries.md  04_states-histories-mdps-and-objective.md  07_function-approximation-deadly-triad-and-dqn.md  09_reward-design-representation-evaluation-and-roadmap.md  Makefile  README.md  claude_code_src_applied_rigorous_spec.md  cs175_csp_readme_audit.md  csp_mastery_notes.md  david_eppstein_edit_frequency.py  david_eppstein_edit_frequency_monthly.csv  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
01_audit/: README.md
02_problem-setup-and-agent-environment-interaction/: README.md
03_mathematical-preliminaries/: README.md
04_states-histories-mdps-and-objective/: README.md
05_value-functions-bellman-equations-and-policy-improvement/: README.md
06_dynamic-programming-monte-carlo-td-sarsa-qlearning/: README.md
07_function-approximation-deadly-triad-and-dqn/: README.md
08_policy-gradients-reinforce-baselines-actor-critic-ppo-sac/: README.md
09_reward-design-representation-evaluation-and-roadmap/: README.md
10_constraint-satisfaction-problems-search-optimization-and-complexity/: README.md
11_deterministic-and-nondeterministic-turing-machines/: README.md
12_cook-levin-proof/: README.md
docs/: README.md  index.html  milestones.html  model-summary.html  reproducibility.html  results.html
experiments/: README.md  __init__.py  smoke.py
scripts/: build_docs.py  detect_dollar_math_violations.py  fix_markdown_math.py  run_smoke.py
tests/: test_corruption.py  test_meta_scheduler.py  (+3 more)
(+57 files in other folders)
